# security-exercise

./: README.md
README/: final_solution.md  thinking_process.md
client-mock/: main  main.c
process/: CMakeLists.txt  connection_management.c  connection_management.h  identify_listening_process_details.c  identify_listening_process_details.h  inject_payload.c  injector.c  injector.h  main.c  test_dlopen  test_dlopen.c
process/injection/: inject_payload.c  injector.c  injector.h
process/injection/utils/: connection_storage.c  connection_storage.h  got_injection.c
process/injection/utils/hooks/: hook_global_state.c  hook_global_state.h  hook_read.c  hook_read.h  hooked_accept.c  hooked_accept.h
process/utils/: envs.h  helpers.c  helpers.h  identify_listening_process_details.c  identify_listening_process_details.h  unix_socket.c  unix_socket.h
web-server/: CMakeLists.txt  main  main.c
